--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 }
 
 dependencies {
+    compile "co.elastic.apm:apm-agent-api:1.6.1"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -47,7 +49,6 @@ task runPipeline {
                 }
             })
         })
-        
         taskExecutor.shutdown()
         try {
             taskExecutor.awaitTermination(Long.MAX_VALUE, NANOSECONDS)
