--- a/pipeline.properties
+++ b/pipeline.properties
@@ -1,2 +1,4 @@
 # Defines number of processors in pipeline and ports that they use. Length of list must be >=2
 ports=7070,7071,7072,7073
+#If set to false processor exit when message is processed, otherwise eternal loop is turned on
+burnCpus=false
