--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,10 @@ task runPipeline {
         def props = new Properties()
         file("pipeline.properties").withInputStream { props.load(it) }
         def portsStr = props.getProperty("ports")
-        def burnCpus = props.getProperty("burnCpus");
-        def total = portsStr.split(",").length + 1;
+        def burnCpus = props.getProperty("burnCpus")
+        def total = portsStr.split(",").length + 1
+        Random random = new Random()
+        def selectId = random.nextInt();
 
         def taskExecutor = Executors.newFixedThreadPool(total)
         1.upto(total, {
@@ -80,7 +82,7 @@ task runPipeline {
                         "-Delastic.apm.secret_token=${apmProps.getProperty("elastic.apm.secret_token")}",
                         "-Delastic.apm.application_packages=${apmProps.getProperty("elastic.apm.application_packages")}",
                         "-jar",
-                        jar.archivePath, num, portsStr, burnCpus]
+                        jar.archivePath, num, selectId, portsStr, burnCpus]
                 }
             })
         })
